# DataInfrastructureSystem

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  RAILWAY.md  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-full.txt  requirements.docker.txt  requirements.txt
airflow/dags/: ad_media_daily_etl.py
apps/api/: main.py  port_bridge.py  server.py
apps/api/routers/: ai.py  health.py  metrics.py
apps/django_placeholder/: README.md
apps/web/: Dockerfile  README.md  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: Dashboard.tsx
apps/web/src/lib/: api.ts  format.ts  types.ts
bi/: README.md
dbt_project/: dbt_project.yml  profiles.yml.example
dbt_project/models/marts/: campaign_performance.sql  daily_media_summary.sql
dbt_project/models/staging/: sources.yml  stg_ad_performance.sql
infra/aws/: README.md
infra/azure/: README.md
infra/etl/: README.md
infra/gcp/: README.md
scripts/: railway_start.sh  run_pipeline.py  start.sh
spark/jobs/: aggregate_ad_performance.py
sql/: 001_schema.sql
