[project]
name = "data-infrastructure-system"
version = "0.1.0"
description = "Multi-platform advertising media data infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "pyarrow>=16.1.0",
  "openai>=1.30.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "tenacity>=8.3.0",
  "orjson>=3.10.0",
  "python-dateutil>=2.9.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
warehouse = [
  "dbt-core>=1.8.0",
  "dbt-postgres>=1.8.0",
  "dbt-bigquery>=1.8.0",
  "dbt-snowflake>=1.8.0",
  "dbt-redshift>=1.8.0",
]
spark = ["pyspark>=3.5.1"]
airflow = ["apache-airflow>=2.9.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]
